fix: hide the scrollbar for now, even on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -287,7 +287,6 @@ img {
     .products__list {
         margin-left: 5%;
         grid-template-rows: repeat(1, auto);
-        scrollbar-width: auto;
     }
 }
 
